--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 
 <body>
 
+    <div class="row1">
+        <div class="square1 square" id="r1c1"></div>
+        <div class="square2 square" id="r1c2"></div>
+        <div class="square3 square" id="r1c3"></div>
+    </div>
+    <div class="row2">
+        <div class="square1 square" id="r2c1"></div>
+        <div class="square2 square" id="r2c2"></div>
+        <div class="square3 square" id="r2c3"></div>
+    </div>
+    <div class="row3">
+        <div class="square1 square" id="r3c1"></div>
+        <div class="square2 square" id="r3c2"></div>
+        <div class="square3 square" id="r3c3"></div>
+    </div>
+    <button id="rese">Reset</button>
+    <h2 class="winner"></h2>
+
     <script src="script.js"></script>
 </body>
 
