pre refactor(noPurity)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="square2 square" id="r3c2"></div>
         <div class="square3 square" id="r3c3"></div>
     </div>
-    <button id="rese">Reset</button>
+    <button id="reset">Reset</button>
     <h2 class="winner"></h2>
 
     <script src="script.js"></script>
